<resources>
    <string name="app_name">Fitness Shark</string>

    <string name="value_any_category">All food</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="all_workout_plans">All Workout Plans</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>

    <string name="sort_by_rating">Sort by Rating</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="sort_by_difficulty">Sort by difficulty</string>


    <string name="sorted_by_rating">sorted by rating</string>
    <string name="sorted_by_price">sorted by price</string>
    <string name="sorted_by_popularity">sorted by popularity</string>
    <string name="sorted_by_difficulty">sorted by difficulty</string>

    <string name="add_random_items">Add Random Items</string>
    <string name="add_parameters">Customize Your Training Parameters</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>

    <!--UserProfile strings -->
    <string name="user_profile">Your Profile </string>
    <string name="user_goal">Your Goal</string>
    <string name="user_experience">Your Training Experience</string>
    <string name="user_preferred_duration">Your Preffered Training Duration</string>
    <string name="user_preferred_days">Your Preffered Training Days Split</string>
    <string name="user_flexibility">Your Flexibility Scale</string>

    <string name="goal_build_muscle">Build Muscle</string>
    <string name="goal_lose_fat">Lose Fat</string>
    <string name="goal_maintain_weight">Maintain Your Weight</string>
    <string name="goal_strength">Strength Improve</string>
    <string name="goal_endurance">Endurance Increase</string>

    <string name="experience_beginner">Beginner (less than a year)</string>
    <string name="experience_amateur">Amateur (1 – 2 years)</string>
    <string name="experience_intermediate">Intermediate (2 – 5 years)</string>
    <string name="experience_advanced">Advanced (5 – 10 years)</string>
    <string name="experience_elite">Elite (more than 10 years</string>

    <string name="pref_duration_30">30 min</string>
    <string name="pref_duration_45">45 min</string>
    <string name="pref_duration_60">60 min</string>
    <string name="pref_duration_75">75 min </string>
    <string name="pref_duration_90">90 min</string>
    <string name="pref_duration_long">120 min</string>

    <string name="pref_days_2">2 Times a Week</string>
    <string name="pref_days_3">3 Times a Week</string>
    <string name="pref_days_4">4 Times a Week</string>
    <string name="pref_days_5">5 Times a Week</string>
    <string name="pref_days_6">6 Times a Week</string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories">
        <item>@string/value_any_category</item>

        <item>Brunch</item>
        <item>Burgers</item>
        <item>Coffee</item>
        <item>Deli</item>
        <item>Dim Sum</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Pizza</item>
        <item>Ramen</item>
        <item>Sushi</item>
    </string-array>
    ite

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vagas</item>
        <item>Long Beach</item>
        <item>Los Angeles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Price filters -->
    <string-array name="prices">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort restaurants -->
    <string-array name="sort_by">
        <item>@string/sort_by_rating</item>
        <item>@string/sort_by_popularity</item>
        <item>@string/sort_by_price</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_parameters">Parameters</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save_profile">Save Profile</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="generate_workout_plan">Generate Workout Plan</string>
    <string name="profile_max_deadlift">Your max deadlift [kg]</string>
    <string name="profile_max_squat">Your max squat [kg]</string>
    <string name="profile_max_benech">Your max bench press [kg]</string>
    <string name="profile_max_press">Your max overhead press [kg]</string>
    <string name="message_no_exercises">Add new exercises to workout</string>
</resources>
